Adding index.js, package.json dependencies, updating gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,23 @@ typings/
 
 # next.js build output
 .next
+
+#ignore all video files
+*.wmv
+*.mpg
+*.mpeg
+*.mp4
+*.mov
+*.flv
+*.avi
+*.ogv
+*.ogg
+*.webm
+
+#ignore audio file
+*.wav
+*.mp3
+
+#ingore subtitles files
+*.srt
+*.sbv
