upgraded twitter-media
tested and it works, was able to upload 140 sec(2min) clip

--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "dotenv": "^6.0.0",
     "fluent-ffmpeg": "^2.1.2",
     "twit": "^2.2.11",
-    "twitter-media": "0.1.0"
+    "twitter-media": "^0.2.0"
   }
 }
