--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "dependencies": {
     "dotenv": "^6.0.0",
     "fluent-ffmpeg": "^2.1.2",
-    "twit": "^2.2.11",
-    "twitter-media": "^0.2.0"
+    "request": "^2.88.0"
   }
 }
